[package]
name = "pallet-content"
version = "0.0.0"
# authors.workspace = true
edition = "2021"
license = "MIT-0"
# homepage.workspace = true
# repository.workspace = true
description = "Content pallet"
readme = "README.md"

[lints]
# workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2506-1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"sp-runtime/try-runtime",
]
