[package]
name = "pallet-content"
version = "0.1.0"
# authors.workspace = true
edition = "2021"
license = "MIT-0"
# homepage.workspace = true
# repository.workspace = true
description = "Content pallet"
readme = "README.md"

[lints]
# workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [".", "pallet-account-content", "pallet-account-profile"]
resolver = "2"

[workspace.dependencies]
codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2512-3", default-features = false }

[dependencies]
codec = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
polkadot-sdk = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"polkadot-sdk/std",
	"polkadot-sdk/frame-support",
	"polkadot-sdk/frame-system",
	"polkadot-sdk/pallet-balances",
	"polkadot-sdk/sp-io",
	"polkadot-sdk/sp-runtime",
	"scale-info/std",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
]
